# rag_controller

./: .gitignore  pyproject.toml
scripts/: train_reinforce.py
src/agent/: base.py  reinforce.py
src/agent/policy_network/: base.py
src/dataset/: base.py
src/env/: rag_env.py
src/env/rewarder/: answer_F1.py  base.py  context_relvancy.py
src/model/rag/: adaptative_top_k.py
src/model/text_2_text_models/: llm_agent.py
src/trainer/: base.py
