[project]
name = "rag-controller"
version = "0.1.0"
description = ""
authors = [
    {name = "briag1",email = "briag.rehel@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "llama-index (>=0.12.23,<0.13.0)",
    "torch (==2.1.2)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]